virtualbox-ose (1.6.2-dfsg-3) UNRELEASED; urgency=low

  * Removing empty lines at EOF and whitespaces at EOL.

 -- Daniel Baumann <daniel@debian.org>  Wed,  2 Jul 2008 18:33:00 +0200

virtualbox-ose (1.6.2-dfsg-2) unstable; urgency=low

  [ Daniel Baumann ]
  * Using dpkg-architecture rather than dpkg --print-architecture in
    01-no-64bit-guest.dpatch in order to be more accurate for ia32 subarchs
    like lpia, thanks to Loic Minier <lool@debian.org>.
  * Rediffing 02-config-kmk.dpatch.
  * Adding patch to adjust failure message with Debian specific solution when
    experiencing kernel module version mismatch.

  [ Hilko Bengen ]
  * Re-added watch file: Innotek/Sun still want us to use their INTERSHOP
    system to download the tarball, but luckily, there is an alternative
    download location.
  * Enhanced README.Debian

  [ Patrick Winnertz ]
  * Adding VBoxHeadless to virtualbox. Thanks to Stefan Lippers-Hollmann.
    (Closes: #486544)

  [ Michael Meskes ]
  * Remove LocalConfig.kmk in clean target.
  * Source env.sh before starting to build.
  * Include our wiki page as simple html file under
    /usr/share/doc/virtualbox-ose. (Closes: #484998)
  * Install VBoxRandR into guest-utils package.
  * Moved udev rule from virtualbox-ose-guest-modules package to
    virtualbox-ose-guest-utils package. (Closes: #488455)

  [ Loic Minier ]
  * Build virtualbox-ose, virtualbox-ose-dbg, and virtualbox-ose-guest-utils
    for lpia.
  * Wrap uploaders, bdeps, and deps on multiple lines to get cleaner diffs.
  * Cleanup upstreamversion computation and compute it only once.
  * Set VBOX_WITH_X11_ADDITIONS in rules when the DEB_HOST_ARCH is i386 or
    lpia instead of using dpkg --print-architecture.
  * Use the -s flag to dh_ commands instead of 3 debhelper calls and a shell
    test; as a bonus, this provides additional detached symbols in -dbg.
  * Move all -a flags to -s.
  * Install files into virtualbox-ose-guest-utils unconditionally and ignore