@@ -1,6 +1,11 @@
 virtualbox-ose (1.6.2-dfsg-3) UNRELEASED; urgency=low
 
+  [ Daniel Baumann ]
   * Removing empty lines at EOF and whitespaces at EOL.
+
+  [ Loic Minier ]
+  * Drop useless subshells in rules files and export environment vars
+    explicitely; also change "cd foo; $(MAKE)" patterns to "$(MAKE) -C foo".
 
  -- Daniel Baumann <daniel@debian.org>  Wed,  2 Jul 2008 18:33:00 +0200
 
